# duka

./: package-lock.json
backend/: Cargo.toml
backend/migrations/: 20260309183227_tables_v1.sql  20260323190404_remove_field_on_sellers.sql  20260327135204_sessions_table.sql
backend/src/: \  api.rs  lib.rs  main.rs  persistence.rs  utils.rs
backend/src/api/: errors.rs  handler.rs  route.rs  session.rs
backend/src/domain/: merchant.rs
backend/src/persistence/: create_merchent.rs  db.rs  fetch.rs
backend/src/utils/: telemetry.rs
backend/src/view/: handler.rs
backend/tests/: auth.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/admin/: index.html
frontend/css/: output.css
frontend/pages/: landing.html
frontend/src/js/: main.js
frontend/src/js/api/: auth.js
frontend/src/js/features/: auth.js
frontend/src/js/ui/: modal.js
