[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-session = "0.11.0"
actix-web = "4.13.0"
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.15.4"
dotenvy = "0.15.7"
futures-util = "0.3.32"
rand = { version = "0.10.0", features= ["std", "std_rng"] }
serde = { version ="1.0.228", features= ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "time",
    "chrono",
]}
thiserror = "2.0.18"
tokio = { version = "1.50.0", features= ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
